<resources>
    <string name="app_name">Défi Photo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="email">email</string>
    <string name="password">password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_accueil">Accueil</string>
    <string name="envoyer_mail">Envoyer un email</string>

    <string name="matiere_et_produits">Matière et produits</string>
    <string name="equipements">Équipements</string>
    <string name="tache_et_exigences">Tâche et exigences</string>
    <string name="individu">Individu</string>
    <string name="env_de_travail">Environnement de travail</string>
    <string name="res_humaines">Ressources humaines</string>

    <string name="confirmer_boutton">Confirmer</string>
</resources>
